# Calyx

./: .gitignore  README.md  TODO.md  calyx.opam  calyxLsp.opam  dune-project  example.calyx  flake.nix  syntax.md
.github/workflows/: ci.yaml
examples/: composition.calyx  fibonacci.calyx  formatting.calyx  let.calyx  nat.calyx  polymorphism.calyx  record.calyx  sum.calyx
lib/: bloom.c  bloom.h  bloom.ml  bloom.mli  bloom_stubs.c  calyxError.ml  checker.ml  codegen.ml  constraint.ml  constructorSet.ml  context.ml  dune  env.ml  error.ml  formatting.ml  ident.ml  interval_tree.ml  ir.ml  lexer.mll  meta.ml  parse.ml  parser.ml  parser.mly  pos.ml  pretty.ml  reader.ml  resolve.ml  runner.ml  solve.ml  stepper.ml  term.ml  token.ml  topsort.ml  trace.ml  trace.mli  util.h  util.ml  vector.c  vector.h  vector.ml  (+4 more)
lib/lsp/: dune  intervalTree.ml  server.ml
scripts/: all-examples.sh  rebuild-grammar.sh
stubs/: bloom.c
tree-sitter-calyx/: grammar.js  package-lock.json  package.json
tree-sitter-calyx/queries/: highlights.scm
