(ocamllex lexer)

(menhir
 (modules parser)
 (flags --dump --cmly --table --base calyx))

(library
 (public_name calyx)
 (name calyx)
 (libraries
  base
  core
  core_unix
  core_unix.time_unix
  ppx_log
  menhirLib
  unix
  qcheck
  nottui
  nottui-unix
  pprint)
 (foreign_stubs
  (language c)
  (names bloom bloom_stubs vector vector_stubs))
 (preprocess
  (pps
   ppx_jane
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.make
   ppx_deriving.map))
 (inline_tests))
